# HeadsetControl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CHANGELOG_CPP_REWRITE.md  CMakeLists.txt  CMakePresets.json  README.md  format-code.sh  license  main.c  makefile  vcpkg.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_new_device.yaml  20-feature-device.yaml  30-bug-device.yaml  40-feature.yaml  50-bug.yaml  issue-template.md  new-device-template.md
.github/workflows/: build-windows.yml  build.yml  check-whitespace.yml  ci.yml  clang-format.yml  clang-tidy.yml  continuos-release.yml  repo-device-requested.yml  repo-stale.yml
assets/: headsetcontrol.rc
cli/: CMakeLists.txt  argument_parser.hpp  dev.cpp  main.cpp  output.hpp
cli/output/: output.cpp  output_data.hpp  serializers.hpp
cmake_modules/: Findhidapi.cmake
docs/: ADDING_A_CAPABILITY.md  ADDING_A_CORSAIR_DEVICE.md  ADDING_A_DEVICE.md  DEVELOPMENT.md  LIBRARY_USAGE.md
lib/: CMakeLists.txt  capability_descriptors.hpp  dev.cpp  dev.hpp  device.cpp  device.hpp  device_registry.cpp  device_registry.hpp  feature_handlers.hpp  feature_utils.hpp  globals.cpp  headsetcontrol.cpp  headsetcontrol.hpp  headsetcontrol_c.cpp  headsetcontrol_c.h  hid_utility.cpp  hid_utility.h  hid_utility.hpp  result_types.cpp  result_types.hpp  string_utils.hpp  utility.cpp  utility.h  utility.hpp
lib/devices/: CMakeLists.txt  audeze_maxwell.hpp  corsair_device.hpp  corsair_void_rich.hpp  corsair_void_v2w.hpp  device_utils.hpp  headsetcontrol_test.hpp  hid_device.cpp  hid_device.hpp  hid_interface.hpp  hyperx_cloud_2_wireless.hpp  hyperx_cloud_3.hpp  hyperx_cloud_alpha_wireless.hpp  hyperx_cloud_flight.hpp  lenovo_wireless_voip.hpp  logitech_device.hpp  logitech_g432.hpp  logitech_g533.hpp  logitech_g535.hpp  logitech_g633_g933_935.hpp  logitech_g930.hpp  logitech_gpro.hpp  logitech_gpro_x2_lightspeed.hpp  logitech_zone_wired.hpp  roccat_elo_7_1_air.hpp  roccat_elo_7_1_usb.hpp  steelseries_arctis_1.hpp  steelseries_arctis_7.hpp  steelseries_arctis_7_plus.hpp  steelseries_arctis_9.hpp  steelseries_arctis_nova_3.hpp  steelseries_arctis_nova_3p_wireless.hpp  steelseries_arctis_nova_5.hpp  steelseries_arctis_nova_7.hpp  steelseries_arctis_nova_7p.hpp  steelseries_arctis_nova_pro_wireless.hpp  steelseries_arctis_pro_wireless.hpp
lib/devices/protocols/: hidpp_protocol.hpp  logitech_calibrations.hpp  steelseries_protocol.hpp
python/: headsetcontrol-gui.py
src/: CMakeLists.txt  dev.c  dev.h  device.c  device.h  device_registry.c  device_registry.h  hid_utility.c  hid_utility.h  main.c  output.c  output.h  test_workflow_checks.c  utility.c  utility.h  version.h.in
src/devices/: CMakeLists.txt  audeze_maxwell.c  audeze_maxwell.h  corsair_void.c  corsair_void.h  corsair_void_pro.c  corsair_voidpro.c  corsair_voidpro.h  corsair_voidpro_wireless.c  corsair_voidpro_wireless.h  headsetcontrol_test.c  headsetcontrol_test.h  hyperx_calphaw.c  hyperx_calphaw.h  hyperx_cflight.c  hyperx_cflight.h  hyperx_cloud2_wireless.c  hyperx_cloud2_wireless.h  hyperx_cloud_2.c  hyperx_cloud_2.h  hyperx_cloud_2_wireless.c  hyperx_cloud_2_wireless.h  hyperx_cloud_3.c  hyperx_cloud_3.h  logitech.h  logitech_g430.c  logitech_g430.h  logitech_g432.c  logitech_g432.h  logitech_g433.c  logitech_g433.h  logitech_g533.c  logitech_g533.h  logitech_g535.c  logitech_g535.h  logitech_g633.c  logitech_g633.h  logitech_g633_635_733_933_935.c  logitech_g633_635_733_933_935.h  logitech_g633_g933_935.c  (+54 more)
tests/: CMakeLists.txt  test_cli_output.cpp  test_device_registry.cpp  test_edge_cases.cpp  test_hid_interface.cpp  test_library_api.cpp  test_library_linkage.cpp  test_output_formats.cpp  test_protocols.cpp  test_runner.cpp  test_string_escaping.cpp  test_utilities.cpp
udev/: 50-corsair-void-elite.rules  50-corsair-void-pro-usb.rules  50-corsair-void-pro.rules  50-corsair_corsair_void_rgb_usb.rules  50-logitech-g533.rules  50-logitech-g633.rules  50-logitech-g930.rules  50-logitech-g933.rules  50-logitech-g935.rules  50-steelseries-arctis-7-2019.rules  50-steelseries-arctis-7.rules  50-steelseries-arctis-pro-2019.rules  70-headsets.rules  corsairvoid.rules  corsairvoidpro.rules  logitech_g430.rules  logitechg633.rules  logitechg930.rules  steelseriesarctis7.rules
